<resources>
    <string name="app_name">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameNotes">Мои заметки</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_clear">Очистить</string>
    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="main">Основное</string>
    <string name="Favorite">Избранное</string>
    <string name="more">Больше</string>
    <string name="add">Добавить</string>
    <string name="clearList">Очистить</string>
    <string name="Open">Открыть</string>
    <string name="Del">Удалить</string>
    <string name="SaveNotes">Сохранить</string>
    <string name="my_notes">My notes</string>
    <string name="NameNotes">Название заметки</string>
    <string name="DateNotes">Дата заметки</string>
    <string name="DescriptionNotes">Описание заметки</string>
    <string name="ButtonSave">Сохранить</string>
    <string name="ButtonListNotes">К списку заметок</string>
    <string name="clear">Очистить</string>
    <string name="TurnDarkTheme">Темная тема</string>
    <string name="AlertDeleteNotes">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dunno">Не Знаю</string>
    <string name="Cancel">Отмена</string>
    <string name="menu_save">Сохранить</string>
    <string name="Save">Сохранить</string>
    <string name="continue_">Продолжить</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">sign_in</string>
    <string name="registrationTop">Зарегистрируйтесь или войдите через несколько предложенных вариантов</string>
    <string name="registrationBottom">Приложение не распространяет никаких личных данных и не использует из в своих личных целях</string>
    <string name="SignInGoogle">Войти через Google</string>
    <string name="SignInVK">Войти через Вконтакте</string>
    <string name="SignInFB">Войти через facebook</string>
    <string name="SignInEmail">Регистрация через электронную почту</string>
</resources>