<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/Settings" />
    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="10"
        android:title="@string/main"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="20"
        android:title="@string/Favorite"/>
    <item
        android:id="@+id/more"
        android:title="@string/more">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <item
                android:id="@+id/more_1"
                android:orderInCategory="100"
                android:title="Первый пункт"/>
            <item
                android:id="@+id/more_2"
                android:orderInCategory="10"
                android:title="Первый пункт"/>
        </menu>

    </item>

</menu>