<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NameNotes"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/editDescNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/google_play_services_version"
        android:hint="@string/DescriptionNotes"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:clickable="true"
        android:datePickerMode="spinner"
        android:maxDate="укук"
        android:spinnersShown="true"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save" />

</LinearLayout>